wwr/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');


:root {
    /* change the values below to your colors from your palette */
    --primary-color: #CAD2C5;
    --secondary-color: #84A98C;
    --accent1-color: #52796F;
    --accent2-color: #354F52;
    --accent3-color: #2F3E46;
    --light-text: #CAD2C5;
    --dark-text: #2F3E46;

    /* change the values below to your chosen font(s)
    --heading-font: 'Poppins', sans-serif;
    --paragraph-font: 'Open Sans', Helvetica, sans-serif;*/
}

#content {
    max-width: 1600px;
    margin: 0 auto;
}

#background {
    height: 725px;
    background-color: var(--accent1-color);
}

body {
    background-color: var(--primary-color);
    font-family: 'Open Sans', Helvetica, sans-serif;
    font-size: 22px;
    margin: 0;
    padding: 0;
}

header {
    background-color: var(--accent2-color);
    display: grid;
    grid-template-columns: 150px auto;
}


main section img {
    box-sizing: border-box;
}

.logo {
    width: 80px;
}

#logo_link {
    padding-top: 5px;
    justify-self: center;
    align-self: center;
}

nav {
    display: flex;
    justify-content: space-around;
}

nav a {
    text-align: center;
    color: var(--light-text);
    text-decoration: none;
    padding: 35px;
}

nav a:hover {
    background-color: var(--accent3-color);
}

.home-title {
    color: var(--dark-text);
    font-family: 'Poppins', sans-serif;
    font-size: 2em;
    margin-top: 10px;
}

h4 {
    color: var(--dark-text);
}

h2 {
    margin: 0;
}

#hero {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    margin-top: -100px;
}

#hero-box {
    grid-column: 1/4;
    grid-row: 1/3;
    z-index: -1;
}

#hero-img {
    width: 100%;
    grid-area: 1 / 1 / 3 / 4
}

#hero-msg {
 grid-area: 1 / 2 / 2 / 3;
 margin-top: 100px; 
}

#hero-msg h1,
#hero-msg h4 {
    text-align: center;
    color: var(--light-text)
}

.home-grid {
    display: grid;
    grid-template-columns: repeat(10, 1fr);
}

.button-box {
    text-align: center;
}

main section {
    text-align: center;
}

.book,
.join {
    background-color: var(--accent2-color);
    color: var(--light-text);
    text-decoration: none;
    font-size: 18px;
    padding: 15px 30px;
    margin-top: 50px;
    border-radius: 5px;
}

.book:hover,
.join:hover {
    background-color: var(--accent3-color);
    /*color: #*/
}

.icon {
    width: 80px;
    padding-top: 10px;
}

.card-img {
    border: 10px solid var(--accent1-color);
    width: 100%;
    transition: transform .8s;
    box-shadow: 5px 5px 10px #6f7364;
}
.card-img:hover {
    opacity: .9;
    transform: scale(1.1);
}

.rivers-card {
    margin: 200px 0;
    grid-area: 2 / 2 / 3 / 4;

}

.camping-card {
    margin: 200px 0;
    grid-area: 2 / 5 / 3 / 7;

}

.rapids-card {
    margin: 200px 0;
    grid-area: 2 / 8 / 3 / 10;

}

#background {
 grid-area: 4 / 1 / 9 / 11;
}

.mountains {
    width: 100%;
    grid-area: 5 / 2 / 8 / 7;
    box-shadow: 5px 5px 10px var(--dark-text);

}



.msg {
    background-color: var(--accent2-color);
    line-height: 1.5em;
    padding: 35px;
    grid-area: 6 / 6 / 7 / 10 ;
    box-shadow: 5px 5px 10px var(--dark-text);
}

.msg h2 {
    color: var(--light-text);
}

.msg p {
    color: var(--light-text);
    font-size: .8em;
    padding-bottom: 15px;
}

footer {
    background-color: var(--accent3-color);
    color: var(--light-text);
    padding: 25px 50px;
    margin-top: 200px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

footer p {
    font-size: 1.2em;
}

footer a {
    color: var(--light-text);
    text-decoration: none;
}

footer a:hover {
    color: var(--light-text);
}

footer p a:hover {
    text-decoration: underline;
}

footer .social img {
    padding-top: 15px;
}



@media screen and (max-width: 900px) {
    #hero, .home-grid {
        display: block;
        height: auto;
    }
    nav, footer {
        flex-direction: column;
    }
    nav a {
        display: block;
        padding: 15px;
    }
    #hero {
        margin-top: 0;
    }
    #hero-msg {
        margin-top: 0;
    }
    #hero-msg h4 {
        display: none;
    }
    .home-title {
        font-size: 25px;
    }
    #hero-msg h1 {
        color: var(--dark-text)
    }
    .rivers-card, .camping-card, .rapids-card { 
        margin: 50px auto;
        width: 60%;
    }
    #background {
        display: none;
    }
    .mountains, .msg {
        width: 80%;
        display: block;
        margin: 0 auto;
    }
    footer {
        margin-top: 25px;
    }
}

